<resources>
    <string name="app_name">OBTT</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign-up</string>
    <string name="kr_sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">Log In with Facebook</string>
    <string name="login_with_google">Log In with Google</string>

    <string name="input_id_password">아이디 혹은 비밀번호를 입력하세요.</string>
    <string name="wrong_id_password">아이디 혹은 비밀번호가 잘못됐습니다.</string>
    <string name="go_login">이미 회원인가요?\n로그인하기 -></string>

    <string name="exist_id">존재하는 아이디입니다.</string>
    <string name="check_password">동일한 비밀번호를 입력해주세요.</string>

    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="bookmark">BOOKMARK</string>
    <string name="my_page">MY PAGE</string>

    <string name="kr_home">홈</string>
    <string name="timeline">시간별</string>
    <string name="community">커뮤니티</string>

    <string name="recommendation">맞춤추천!</string>
    <string name="more">더보기 ></string>
    <string name="ranking">OBTT 랭킹!</string>
</resources>
