<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/selector_search"
        android:title="@string/search" />

    <item
        android:id="@+id/bookmarkFragment"
        android:enabled="true"
        android:icon="@drawable/selector_bookmark"
        android:title="@string/bookmark" />

    <item
        android:id="@+id/myPageFragment"
        android:enabled="true"
        android:icon="@drawable/selector_my_page"
        android:title="@string/my_page" />

</menu>